refactor: introduce OpenAIChatCompletionStandardMessage and OpenAIChatCompletionDetailedMessage types