@@ -16,11 +16,9 @@ import ee.carlrobert.llm.client.http.ResponseEntity;
 import ee.carlrobert.llm.client.http.exchange.BasicHttpExchange;
 import ee.carlrobert.llm.client.http.exchange.StreamHttpExchange;
 import ee.carlrobert.llm.client.openai.completion.ErrorDetails;
-import ee.carlrobert.llm.client.openai.completion.request.OpenAIChatCompletionMessage;
 import ee.carlrobert.llm.client.openai.completion.request.OpenAIChatCompletionRequest;
-import ee.carlrobert.llm.client.openai.completion.request.OpenAIMessageTextContent;
+import ee.carlrobert.llm.client.openai.completion.request.OpenAIChatCompletionStandardMessage;
 import ee.carlrobert.llm.completion.CompletionEventListener;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import okhttp3.sse.EventSource;
@@ -54,8 +52,7 @@ class AzureClientTest extends BaseTest {
               500,
               0.1,
               0.1,
-              List.of(Map.of("role", "user", "content",
-                      Collections.singletonList(Map.of("type", "text", "text", prompt)))));
+              List.of(Map.of("role", "user", "content", prompt)));
       return List.of(
           jsonMapResponse("choices", jsonArray(jsonMap("delta", jsonMap("role", "assistant")))),
           jsonMapResponse("choices", jsonArray(jsonMap("delta", jsonMap("content", "Hello")))),
@@ -64,16 +61,14 @@ class AzureClientTest extends BaseTest {
 
     new AzureClient.Builder("TEST_API_KEY",
         new AzureCompletionRequestParams(
-                "TEST_RESOURCE",
-                "TEST_DEPLOYMENT_ID",
-                "TEST_API_VERSION"))
+            "TEST_RESOURCE",
+            "TEST_DEPLOYMENT_ID",
+            "TEST_API_VERSION"))
         .setActiveDirectoryAuthentication(true)
         .build()
         .getChatCompletionAsync(
             new OpenAIChatCompletionRequest.Builder(
-                List.of(new OpenAIChatCompletionMessage(
-                        "user",
-                        new OpenAIMessageTextContent(prompt))))
+                List.of(new OpenAIChatCompletionStandardMessage("user", prompt)))
                 .setMaxTokens(500)
                 .setTemperature(0.5)
                 .setPresencePenalty(0.1)
@@ -117,8 +112,7 @@ class AzureClientTest extends BaseTest {
               500,
               0.1,
               0.1,
-              List.of(Map.of("role", "user", "content",
-                      Collections.singletonList(Map.of("type", "text", "text", prompt)))));
+              List.of(Map.of("role", "user", "content", prompt)));
       return new ResponseEntity(new ObjectMapper().writeValueAsString(
           Map.of("choices", List.of(Map.of("message", Map.of(
               "role", "assistant",
@@ -131,7 +125,7 @@ class AzureClientTest extends BaseTest {
         .setActiveDirectoryAuthentication(true)
         .build()
         .getChatCompletion(new OpenAIChatCompletionRequest.Builder(
-            List.of(new OpenAIChatCompletionMessage("user", new OpenAIMessageTextContent(prompt))))
+            List.of(new OpenAIChatCompletionStandardMessage("user", prompt)))
             .setMaxTokens(500)
             .setTemperature(0.5)
             .setPresencePenalty(0.1)
@@ -172,8 +166,7 @@ class AzureClientTest extends BaseTest {
               500,
               0.1,
               0.1,
-              List.of(Map.of("role", "user", "content",
-                      Collections.singletonList(Map.of("type", "text", "text", prompt)))));
+              List.of(Map.of("role", "user", "content", prompt)));
       return List.of(
           jsonMapResponse("choices", jsonArray(jsonMap("delta", jsonMap("role", "assistant")))),
           jsonMapResponse("choices", jsonArray(jsonMap("delta", jsonMap("content", "Hello")))),
@@ -182,16 +175,14 @@ class AzureClientTest extends BaseTest {
 
     new AzureClient.Builder("TEST_API_KEY",
         new AzureCompletionRequestParams(
-                "TEST_RESOURCE",
-                "TEST_DEPLOYMENT_ID",
-                "TEST_API_VERSION"))
+            "TEST_RESOURCE",
+            "TEST_DEPLOYMENT_ID",
+            "TEST_API_VERSION"))
         .setActiveDirectoryAuthentication(true)
         .build()
         .getChatCompletionAsync(
             new OpenAIChatCompletionRequest.Builder(
-                List.of(new OpenAIChatCompletionMessage(
-                        "user",
-                        new OpenAIMessageTextContent(prompt))))
+                List.of(new OpenAIChatCompletionStandardMessage("user", prompt)))
                 .setMaxTokens(500)
                 .setTemperature(0.5)
                 .setPresencePenalty(0.1)
@@ -227,15 +218,13 @@ class AzureClientTest extends BaseTest {
 
     new AzureClient.Builder("TEST_API_KEY",
         new AzureCompletionRequestParams(
-                "TEST_RESOURCE",
-                "TEST_DEPLOYMENT_ID",
-                "TEST_API_VERSION"))
+            "TEST_RESOURCE",
+            "TEST_DEPLOYMENT_ID",
+            "TEST_API_VERSION"))
         .build()
         .getChatCompletionAsync(
             new OpenAIChatCompletionRequest.Builder(
-                List.of(new OpenAIChatCompletionMessage(
-                        "user",
-                        new OpenAIMessageTextContent("TEST_PROMPT"))))
+                List.of(new OpenAIChatCompletionStandardMessage("user", "TEST_PROMPT")))
                 .build(),
             new CompletionEventListener<String>() {
               @Override
@@ -261,15 +250,13 @@ class AzureClientTest extends BaseTest {
 
     new AzureClient.Builder("TEST_API_KEY",
         new AzureCompletionRequestParams(
-                "TEST_RESOURCE",
-                "TEST_DEPLOYMENT_ID",
-                "TEST_API_VERSION"))
+            "TEST_RESOURCE",
+            "TEST_DEPLOYMENT_ID",
+            "TEST_API_VERSION"))
         .build()
         .getChatCompletionAsync(
             new OpenAIChatCompletionRequest.Builder(
-                List.of(new OpenAIChatCompletionMessage(
-                        "user",
-                        new OpenAIMessageTextContent("TEST_PROMPT"))))
+                List.of(new OpenAIChatCompletionStandardMessage("user", "TEST_PROMPT")))
                 .build(),
             new CompletionEventListener<String>() {
               @Override
