@@ -16,9 +16,8 @@ import ee.carlrobert.llm.client.http.exchange.StreamHttpExchange;
 import ee.carlrobert.llm.client.openai.OpenAIClient;
 import ee.carlrobert.llm.client.openai.completion.ErrorDetails;
 import ee.carlrobert.llm.client.openai.completion.OpenAIChatCompletionModel;
-import ee.carlrobert.llm.client.openai.completion.request.OpenAIChatCompletionMessage;
 import ee.carlrobert.llm.client.openai.completion.request.OpenAIChatCompletionRequest;
-import ee.carlrobert.llm.client.openai.completion.request.OpenAIMessageTextContent;
+import ee.carlrobert.llm.client.openai.completion.request.OpenAIChatCompletionStandardMessage;
 import ee.carlrobert.llm.client.openai.completion.request.OpenAITextCompletionRequest;
 import ee.carlrobert.llm.client.openai.completion.request.Tool;
 import ee.carlrobert.llm.client.openai.completion.request.ToolFunction;
@@ -60,10 +59,7 @@ class OpenAIClientTest extends BaseTest {
               500,
               0.1,
               0.1,
-              List.of(Map.of("role", "user",
-                      "content", Collections.singletonList(Map.of(
-                              "type", "text",
-                              "text", prompt)))));
+              List.of(Map.of("role", "user", "content", prompt)));
       return List.of(
           jsonMapResponse("choices", jsonArray(jsonMap("delta", jsonMap("role", "assistant")))),
           jsonMapResponse("choices", jsonArray(jsonMap("delta", jsonMap("content", "Hello")))),
@@ -75,9 +71,7 @@ class OpenAIClientTest extends BaseTest {
         .build()
         .getChatCompletionAsync(
             new OpenAIChatCompletionRequest.Builder(
-                List.of(new OpenAIChatCompletionMessage(
-                        "user",
-                        new OpenAIMessageTextContent(prompt))))
+                List.of(new OpenAIChatCompletionStandardMessage("user", prompt)))
                 .setModel(OpenAIChatCompletionModel.GPT_3_5)
                 .setMaxTokens(500)
                 .setTemperature(0.5)
@@ -178,10 +172,7 @@ class OpenAIClientTest extends BaseTest {
               500,
               0.1,
               0.1,
-              List.of(Map.of("role", "user",
-                      "content", Collections.singletonList(Map.of(
-                              "type", "text",
-                              "text", prompt)))));
+              List.of(Map.of("role", "user", "content", prompt)));
       return List.of(
           jsonMapResponse("choices", jsonArray(jsonMap("delta", jsonMap("role", "assistant")))),
           jsonMapResponse("choices", jsonArray(jsonMap("delta", jsonMap("content", "Hello")))),
@@ -193,8 +184,7 @@ class OpenAIClientTest extends BaseTest {
         .build()
         .getChatCompletionAsync(
             new OpenAIChatCompletionRequest.Builder(
-                List.of(new OpenAIChatCompletionMessage(
-                        "user", new OpenAIMessageTextContent(prompt))))
+                List.of(new OpenAIChatCompletionStandardMessage("user", prompt)))
                 .setModel(OpenAIChatCompletionModel.GPT_3_5)
                 .setMaxTokens(500)
                 .setTemperature(0.5)
@@ -239,10 +229,7 @@ class OpenAIClientTest extends BaseTest {
               500,
               0.1,
               0.1,
-              List.of(Map.of("role", "user",
-                      "content", Collections.singletonList(Map.of(
-                              "type", "text",
-                              "text", prompt)))));
+              List.of(Map.of("role", "user", "content", prompt)));
 
       return new ResponseEntity(new ObjectMapper().writeValueAsString(Map.of("choices", List.of(
           Map.of("message", Map.of(
@@ -254,7 +241,7 @@ class OpenAIClientTest extends BaseTest {
         .setOrganization("TEST_ORGANIZATION")
         .build()
         .getChatCompletion(new OpenAIChatCompletionRequest.Builder(
-            List.of(new OpenAIChatCompletionMessage("user", new OpenAIMessageTextContent(prompt))))
+            List.of(new OpenAIChatCompletionStandardMessage("user", prompt)))
             .setModel(OpenAIChatCompletionModel.GPT_3_5)
             .setMaxTokens(500)
             .setTemperature(0.5)
@@ -298,10 +285,7 @@ class OpenAIClientTest extends BaseTest {
               500,
               0.1,
               0.1,
-              List.of(Map.of("role", "user",
-                      "content", Collections.singletonList(Map.of(
-                              "type", "text",
-                              "text", prompt)))),
+              List.of(Map.of("role", "user", "content", prompt)),
               List.of(Map.of("type", "function", "function",
                   Map.of(
                       "name", "get_current_weather",
@@ -353,7 +337,7 @@ class OpenAIClientTest extends BaseTest {
         .setOrganization("TEST_ORGANIZATION")
         .build()
         .getChatCompletion(new OpenAIChatCompletionRequest.Builder(
-            List.of(new OpenAIChatCompletionMessage("user", new OpenAIMessageTextContent(prompt))))
+            List.of(new OpenAIChatCompletionStandardMessage("user", prompt)))
             .setModel(OpenAIChatCompletionModel.GPT_3_5)
             .setMaxTokens(500)
             .setTemperature(0.5)
@@ -391,9 +375,7 @@ class OpenAIClientTest extends BaseTest {
         .build()
         .getChatCompletionAsync(
             new OpenAIChatCompletionRequest.Builder(
-                List.of(new OpenAIChatCompletionMessage(
-                        "user",
-                        new OpenAIMessageTextContent("TEST_PROMPT"))))
+                List.of(new OpenAIChatCompletionStandardMessage("user", "TEST_PROMPT")))
                 .setModel(OpenAIChatCompletionModel.GPT_3_5)
                 .build(),
             new CompletionEventListener<String>() {
@@ -422,8 +404,7 @@ class OpenAIClientTest extends BaseTest {
         .build()
         .getChatCompletionAsync(
             new OpenAIChatCompletionRequest.Builder(
-                List.of(new OpenAIChatCompletionMessage(
-                        "user", new OpenAIMessageTextContent("TEST_PROMPT"))))
+                List.of(new OpenAIChatCompletionStandardMessage("user", "TEST_PROMPT")))
                 .setModel(OpenAIChatCompletionModel.GPT_3_5)
                 .build(),
             new CompletionEventListener<String>() {
